--- a/mockup/css/adm.css
+++ b/mockup/css/adm.css
@@ -6,10 +6,10 @@
     box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
 }
 
-.bi {
+/* .bi {
     vertical-align: -.125em;
     fill: currentColor;
-}
+} */
 
 .feature-icon {
     display: inline-flex;
@@ -28,16 +28,16 @@
     align-items: center;
 }
 
-.icon-link>.bi {
+/* .icon-link>.bi {
     margin-top: .125rem;
     margin-left: .125rem;
     transition: transform .25s ease-in-out;
     fill: currentColor;
-}
+} */
 
-.icon-link:hover>.bi {
+/* .icon-link:hover>.bi {
     transform: translate(.25rem);
-}
+} */
 
 .icon-square {
     display: inline-flex;
