--- a/mockup/css/adm.css
+++ b/mockup/css/adm.css
@@ -6,11 +6,6 @@
     box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
 }
 
-/* .bi {
-    vertical-align: -.125em;
-    fill: currentColor;
-} */
-
 .feature-icon {
     display: inline-flex;
     align-items: center;
@@ -23,40 +18,11 @@
     border-radius: .75rem;
 }
 
-.icon-link {
-    display: inline-flex;
-    align-items: center;
+#icons {
+    width: 40px;
 }
 
-/* .icon-link>.bi {
-    margin-top: .125rem;
-    margin-left: .125rem;
-    transition: transform .25s ease-in-out;
-    fill: currentColor;
-} */
-
-/* .icon-link:hover>.bi {
-    transform: translate(.25rem);
-} */
-
-.icon-square {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: 3rem;
-    height: 3rem;
-    font-size: 1.5rem;
-    border-radius: .75rem;
-}
-
-.rounded-4 {
-    border-radius: .5rem;
-}
-
-.rounded-5 {
-    border-radius: 1rem;
-}
-
+/* Unused css left here just in case we decide to add it*/
 .text-shadow-1 {
     text-shadow: 0 .125rem .25rem rgba(0, 0, 0, .25);
 }
@@ -68,13 +34,4 @@
 .text-shadow-3 {
     text-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .25);
 }
-
-.card-cover {
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-}
-
-#admAdd {
-    width: 40px;
-}
+/* ---- */
