Better organization in images folder

--- a/mockup/css/accessories.css
+++ b/mockup/css/accessories.css
@@ -1,5 +1,5 @@
 #accPhoto {
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.32)), url("../images/accBanner.jpg");
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.32)), url("../images/accessories/accBanner.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 100% 30%;
