--- a/mockup/css/cats.css
+++ b/mockup/css/cats.css
@@ -1,5 +1,5 @@
 #catPhoto {
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0)), url("../images/catBanner.jpg");
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0)), url("../images/cats/catBanner.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 100% 40%;
