--- a/frontend/src/css/itemPage.css
+++ b/frontend/src/css/itemPage.css
@@ -36,6 +36,13 @@ img {
     }
 }
 
+#formats:focus {
+    border-color: #66afe9;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+}
+
 .details {
     display: -webkit-box;
     display: -webkit-flex;
